First pass returning AtBScenario/AtBContract code