@@ -596,7 +596,7 @@ public abstract class AtBScenario extends Scenario implements IAtBScenario {
         if (isBigBattle() && (getForces(campaign).getAllUnits(false).size() > 7)) {
             return false;
         } else {
-            return !isSpecialScenario() || (getForces(campaign).getAllUnits(false).size() == 0);
+            return !isSpecialScenario() || (getForces(campaign).getAllUnits(false).isEmpty());
         }
     }
 
@@ -605,6 +605,7 @@ public abstract class AtBScenario extends Scenario implements IAtBScenario {
      *
      * @return true if the force is eligible to deploy, otherwise false
      */
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public boolean canDeploy(Formation formation, Campaign campaign) {
         Vector<UUID> units = formation.getAllUnits(false);
         if (isBigBattle() && getForces(campaign).getAllUnits(false).size() + units.size() > 8) {
@@ -643,7 +644,7 @@ public abstract class AtBScenario extends Scenario implements IAtBScenario {
      * Determines whether a list of forces is eligible to deploy to the scenario.
      *
      * @param formations list of forces
-     * @param c      the campaign that the forces are part of
+     * @param c          the campaign that the forces are part of
      *
      * @return true if all units in all forces in the list are eligible, otherwise false
      */
@@ -696,7 +697,7 @@ public abstract class AtBScenario extends Scenario implements IAtBScenario {
             if (deployed.isEmpty()) {
                 return;
             }
-            int weight = campaign.getUnit(deployed.get(0)).getEntity().getWeightClass();
+            int weight = campaign.getUnit(deployed.getFirst()).getEntity().getWeightClass();
             /*
              * In the event that Star League Cache 1 generates a primitive 'Mek,
              * the player can keep the 'Mek without a battle so no enemy
@@ -708,9 +709,9 @@ public abstract class AtBScenario extends Scenario implements IAtBScenario {
             }
 
             if ((specialScenarioEnemies != null) &&
-                      (getBotForces().get(0) != null) &&
+                      (getBotForces().getFirst() != null) &&
                       (specialScenarioEnemies.get(weight) != null)) {
-                getBotForces().get(0).setFixedEntityList(specialScenarioEnemies.get(weight));
+                getBotForces().getFirst().setFixedEntityList(specialScenarioEnemies.get(weight));
             }
             setObjectives(campaign, getContract(campaign));
         }
@@ -1237,11 +1238,11 @@ public abstract class AtBScenario extends Scenario implements IAtBScenario {
         String retVal = weights;
         if (maxWeight == EntityWeightClass.WEIGHT_HEAVY) {
             // Hide and Seek (defender)
-            retVal = weights.replaceAll("A", "LM");
+            retVal = weights.replace("A", "LM");
         } else if (maxWeight == EntityWeightClass.WEIGHT_MEDIUM) {
             // Probe, Recon Raid (attacker)
-            retVal = weights.replaceAll("A", "MM");
-            retVal = retVal.replaceAll("H", "LM");
+            retVal = weights.replace("A", "MM");
+            retVal = retVal.replace("H", "LM");
         }
         return retVal;
     }
@@ -1555,8 +1556,8 @@ public abstract class AtBScenario extends Scenario implements IAtBScenario {
           Faction faction) {
         List<Entity> turrets =
               campaign.getCampaignOptions().isUseAdvancedBuildingGunEmplacements()
-                   ? AtBDynamicScenarioFactory.generateGunEmplacements(num, skill, quality, campaign, faction)
-                   : AtBDynamicScenarioFactory.generateTurrets(num, skill, quality, campaign, faction);
+                    ? AtBDynamicScenarioFactory.generateGunEmplacements(num, skill, quality, campaign, faction)
+                    : AtBDynamicScenarioFactory.generateTurrets(num, skill, quality, campaign, faction);
         list.addAll(turrets);
     }
 
@@ -2224,6 +2225,7 @@ public abstract class AtBScenario extends Scenario implements IAtBScenario {
         return alliesPlayer;
     }
 
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public List<UUID> getAttachedUnitIds() {
         return attachedUnitIds;
     }
@@ -2288,6 +2290,7 @@ public abstract class AtBScenario extends Scenario implements IAtBScenario {
         return transportLinkages;
     }
 
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public void setTransportLinkages(HashMap<String, List<String>> transportLinkages) {
         this.transportLinkages = transportLinkages;
     }
