@@ -43,17 +43,16 @@ import java.time.LocalDate;
 import java.util.List;
 import java.util.stream.Stream;
 
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.Arguments;
-import org.junit.jupiter.params.provider.MethodSource;
-
 import mekhq.campaign.Campaign;
 import mekhq.campaign.GameEffect;
 import mekhq.campaign.personnel.Injury;
 import mekhq.campaign.personnel.InjuryType;
 import mekhq.campaign.personnel.Person;
 import mekhq.campaign.personnel.medical.BodyLocation;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 
 /**
  * Test class for {@link InjuryTypes}
@@ -63,8 +62,8 @@ class InjuryTypesTest {
     @Test
     void testRegisterAllDoesNotCrash() {
         // Test that registerAll() completes without throwing an exception
-        assertDoesNotThrow(() -> InjuryTypes.registerAll(),
-            "InjuryTypes.registerAll() should not throw an exception");
+        assertDoesNotThrow(InjuryTypes::registerAll,
+              "InjuryTypes.registerAll() should not throw an exception");
     }
 
     @Test
@@ -79,9 +78,9 @@ class InjuryTypesTest {
     }
 
     /**
-     * Regression test for <a href="https://github.com/MegaMek/mekhq/issues/7565">#7565</a>.
-     * Permanent injuries that can only reset their recovery timer (or would be replaced by a
-     * different injury type) must not produce any stress effects.
+     * Regression test for <a href="https://github.com/MegaMek/mekhq/issues/7565">#7565</a>. Permanent injuries that can
+     * only reset their recovery timer (or would be replaced by a different injury type) must not produce any stress
+     * effects.
      */
     @ParameterizedTest(name = "{0} permanent injury produces no stress effects")
     @MethodSource(value = "permanentInjuryNoStressEffectData")
@@ -113,9 +112,9 @@ class InjuryTypesTest {
     }
 
     /**
-     * Regression test for <a href="https://github.com/MegaMek/mekhq/issues/7565">#7565</a>.
-     * Permanent injuries that can worsen within the same type (severity increase) should still
-     * produce worsening effects, but must not reset the recovery timer.
+     * Regression test for <a href="https://github.com/MegaMek/mekhq/issues/7565">#7565</a>. Permanent injuries that can
+     * worsen within the same type (severity increase) should still produce worsening effects, but must not reset the
+     * recovery timer.
      */
     @ParameterizedTest(name = "{0} permanent injury can still worsen but skips timer reset")
     @MethodSource(value = "permanentInjuryCanWorsenData")
@@ -136,7 +135,7 @@ class InjuryTypesTest {
               injuryName + " is permanent but should still produce worsening effects");
         assertEquals(1, effects.size(),
               injuryName + " should produce exactly 1 effect (worsening only, no timer reset)");
-        assertFalse(effects.get(0).desc().contains("recovery timer"),
+        assertFalse(effects.getFirst().desc().contains("recovery timer"),
               injuryName + " permanent injury should not have a recovery timer reset effect");
     }
 
